# spotify_analytics

./: .gitignore  README.md  over.md  pyproject.toml
backend/: README.md  main.py  models.py  pyproject.toml  spotify_service.py
backend/api/: __init__.py  main.py
backend/core/: __init__.py  database.py
backend/models/: __init__.py  schemas.py
backend/scripts/: __init__.py  auth_and_top_tracks.py  fetch_audio_features.py  fetch_playlists_and_tracks.py
backend/services/: __init__.py  data_analyzer.py  db_service.py  spotify_client.py
backend/tasks/: __init__.py  celery_app.py  tasks.py
backend/tests/: test_analytics.py
frontend/: package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/components/: FeatureChart.tsx  FeatureHistogram.tsx  HistoryList.tsx  MoodScatter.tsx  PlaylistAnalysis.tsx  PlaylistSelector.tsx  RadarChart.tsx  SpotifyAuth.tsx  TempoChart.tsx
